--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1229,63 +1229,17 @@ pre {
   display: block;
   text-align: center;
 }
-.cid-qsgsGxcbEM {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #2e2e2e;
+.cid-qsgKhMlMdb {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background: linear-gradient(0deg, #7fdbfd, #6670a9);
 }
-.cid-qsgsGxcbEM .media-container-row {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.cid-qsgKhMlMdb .mbr-iconfont-social {
+  font-size: 32px;
+  color: #ff3366;
 }
-.cid-qsgsGxcbEM .media-container-row .foot-menu {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 0;
-  margin-bottom: 0;
-}
-.cid-qsgsGxcbEM .media-container-row .foot-menu li {
-  padding: 0 1rem 1rem 1rem;
-}
-.cid-qsgsGxcbEM .media-container-row .foot-menu li p {
-  margin: 0;
-}
-.cid-qsgsGxcbEM .media-container-row .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-}
-.cid-qsgsGxcbEM .media-container-row .social-list .mbr-iconfont-social {
-  font-size: 1.5rem;
-  color: #ffffff;
-}
-.cid-qsgsGxcbEM .media-container-row .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-qsgsGxcbEM .media-container-row .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-qsgsGxcbEM .media-container-row .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-qsgsGxcbEM .media-container-row .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
-.cid-qsgsGxcbEM .media-container-row .row-copirayt {
-  word-break: break-word;
+.cid-qsgKhMlMdb .social-list a:focus {
+  text-decoration: none;
 }
 .cid-qsgturfKtQ {
   padding-top: 90px;
